# SFTP-SYNC

./: .gitignore  Cargo.toml  README.ja-JP.md  README.ko-KR.md  README.md  README.zh-CN.md
.github/workflows/: release.yml
src/: config.rs  connection.rs  main.rs  model.rs  secrets.rs  security.rs  sync.rs  task_queue.rs  view.rs  watcher.rs
