[package]
name = "SFTP-SYNC"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
gpui = "0.2.2"
gpui-component = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
sys-locale = "0.3"
ssh2 = "0.9"
crossbeam-channel = "0.5"
async-channel = "1.9"
once_cell = "1.19"
keyring = "2.0"
notify = "6.1"
sha2 = "0.10"
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3.12"
